[gd_scene load_steps=9 format=1]

[ext_resource path="res://InGameUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/SCOREmenu.png" type="Texture" id=2]
[ext_resource path="res://Fonts/AlienAndCowBoys40.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Fonts/FallingSky40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Sprites/UI/SubmitButton2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/GameOverMenu.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/QuitButton.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/RetryButton.png" type="Texture" id=8]

[node name="InGameUI" type="Control"]

process/pause_mode = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="ScoreFrame" type="TextureFrame" parent="."]

rect/scale = Vector2( 0.45, 0.45 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -49.0
margin/top = -153.0
margin/right = 951.0
margin/bottom = 847.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="ScoreLabel" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 32.0
margin/top = 21.0
margin/right = 189.0
margin/bottom = 77.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 4987
text = "Score:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CurrentScore" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 177.0
margin/top = 39.0
margin/right = 252.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2544
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SubmitButton" type="TextureButton" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 103.0
margin/right = 186.0
margin/bottom = 167.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.6, 0.6 )
params/stretch_mode = 0

[node name="TitleFrame" type="TextureFrame" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1000.0
margin/bottom = 1000.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="QuitButton" type="TextureButton" parent="TitleFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 203.333
margin/top = 901.667
margin/right = 387.333
margin/bottom = 957.667
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="RetryButton" type="TextureButton" parent="TitleFrame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 575.0
margin/top = 898.333
margin/right = 685.4
margin/bottom = 938.333
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TitleLabel" type="Label" parent="TitleFrame"]

rect/scale = Vector2( 1.6, 1.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 223.333
margin/top = 663.333
margin/right = 508.333
margin/bottom = 700.333
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]

[connection signal="pressed" from="TitleFrame/QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="pressed" from="TitleFrame/RetryButton" to="." method="_on_RetryButton_pressed"]


